# riemannian_stats

./: .gitignore  Contributing.md  LICENSE.txt  README.md  README_PyPI.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: .firebaserc  contributing.html  firebase.json  objects.inv  paper.html  utilities.html
docs/.firebase/: hosting.YnVpbGRcaHRtbA.cache
docs/_sources/: contributing.rst.txt  paper.rst.txt  riemannian_analysis.rst.txt  utilities.rst.txt
docs/html/: .buildinfo  contributing.html  data_processing.html  examples.html  genindex.html  github_repository.html  index.html  installation.html  menu.html  modules.html  objects.inv  paper.html  py-modindex.html  riemannian_analysis.html  riemannian_stats.html  search.html  searchindex.js  utilities.html  visualization.html
docs/html/.doctrees/: contributing.doctree  data_processing.doctree  environment.pickle  examples.doctree  github_repository.doctree  index.doctree  installation.doctree  menu.doctree  modules.doctree  paper.doctree  riemannian_analysis.doctree  riemannian_stats.doctree  utilities.doctree  visualization.doctree
docs/html/_modules/: index.html
docs/html/_modules/riemannian_stats/: data_processing.html  riemannian_analysis.html  utilities.html  visualization.html
docs/html/_sources/: contributing.rst.txt  data_processing.rst.txt  examples.rst.txt  github_repository.rst.txt  index.rst.txt  installation.rst.txt  menu.rst.txt  modules.rst.txt  riemannian_stats.rst.txt  utilities.rst.txt  visualization.rst.txt
docs/html/_static/css/: base.css  dark.css
docs/html/_static/examples/: Example2.html
docs/html/_static/js/: theme-switch.js
docs/source/: conf.py  data_processing.rst  index.rst  installation.rst  paper.rst  riemannian_analysis.rst  visualization.rst
docs/source/_static/css/: custom.css  light.css
docs/source/_static/examples/: Example1.html
examples/: example1.py  example2.py  example3.py  example4.py
examples/data/: iris.csv
riemannian_stats/: __init__.py  data_processing.py  riemannian_analysis.py  utilities.py  visualization.py
tests/: conftest.py  test_riemannian_analysis.py  test_utilities.py  test_visualization.py
